# mpee

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md  index.html
crates/brooom/: Cargo.toml  PROSJEKTER.md  README.md  feature.txt  integration.txt  next1.txt  next1.txt.append  rest_list.txt
crates/brooom/benchmarks/: README.md  bks_to_solution.py  doe.py  extract_subroutes.py  factors_example.json  gen_realmap.py  gen_solomon_like.py  gh200_bks.json  gh400_bks.json  gh_gap.py  measure.sh  run_bench.sh  run_multi_bench.py  solomon_to_vroom.py
crates/brooom/benchmarks/instances_realmap/: sf_s11_n80_osrm.json  sf_s3_n20_osrm.json  sf_s7_n80_haversine.json
crates/brooom/benchmarks/instances_solomon/: c101.json  c102.json  c103.json  c104.json  c105.json  c106.json  c107.json  c108.json  c109.json  c201.json  c202.json  c203.json  c204.json  c205.json  c206.json  c207.json  c208.json  r101.json  r102.json  r103.json  r104.json  r105.json  r106.json  r107.json  r108.json  r109.json  r110.json  r111.json  r112.json  r201.json  r202.json  r203.json  r204.json  r205.json  r206.json  r207.json  r208.json  r209.json  r210.json  r211.json  (+16 more)
crates/brooom/benchmarks/k_sweep_2026-05-10/: bench_n2000.csv  bench_n5000.csv  decompose_n200.csv  decompose_n500.csv  decompose_xseed_n1000.csv  k160_n1000.csv  k80_results.csv  k_extreme.csv  k_sweep_large_results.csv  k_sweep_results.csv  vroom_seeds.csv  vroom_small.csv
crates/brooom/benchmarks/results/: beat_pyvrp.md  c101.brooom.json  c101.vroom.json  c1_2_1.brooom.json  c1_2_10.brooom.json  c1_2_2.brooom.json  c1_2_3.brooom.json  c1_2_4.brooom.json  c1_2_5.brooom.json  c1_2_6.brooom.json  c1_2_7.brooom.json  c1_2_8.brooom.json  c1_2_9.brooom.json  c1_4_1.brooom.json  c1_4_5.brooom.json  c201.brooom.json  c201.vroom.json  c2_2_1.brooom.json  c2_2_10.brooom.json  c2_2_2.brooom.json  c2_2_3.brooom.json  c2_2_4.brooom.json  c2_2_5.brooom.json  c2_2_6.brooom.json  c2_2_7.brooom.json  c2_2_8.brooom.json  c2_2_9.brooom.json  c2_4_1.brooom.json  c2_4_5.brooom.json  competitor_comparison.md  constraint_conformance.md  gh200_10s_2026-06-10.csv  gh200_10s_adaptive.csv  gh200_10s_adaptive_v3.csv  gh200_10s_adaptive_v4.csv  gh200_10s_adaptive_v5.csv  gh200_10s_adaptive_v6.csv  gh200_10s_adaptive_v7.csv  gh200_10s_okt7.csv  gh200_10s_okt8.csv  (+246 more)
crates/brooom/benchmarks/solomon_canonical/: bks.csv  results.csv
crates/brooom/docs/: cpsat-boundary.md  matrix-broker.md  pyspell-design.md
crates/brooom/examples/: custom_constraint.rs  cvrptw_test.rs  exact_polish_demo.rs  exact_solver_verify.rs  gpu_2opt_loop.rs  gpu_batched_bench.rs  gpu_evaluate_correctness.rs  gpu_megakernel_batch.rs  gpu_megakernel_demo.rs  gpu_polish_demo.rs  gpu_population_roundtrip.rs  gpu_precompute_correctness.rs  gpu_scaling_synthetic.rs  gpu_sweep_bench.rs  gpu_upload_bench.rs  neural_test.rs  oslo_5jobs.json  pattern_db_bench.rs  solomon_neural_test.rs
crates/brooom/neural/: build_corpus.sh  edge_refiner.onnx  edge_refiner.onnx.data  pointer_cvrptw_decoder.onnx  pointer_cvrptw_decoder.onnx.data  pointer_cvrptw_encoder.onnx  pointer_cvrptw_encoder.onnx.data  pointer_tsp_decoder.onnx  pointer_tsp_decoder.onnx.data  pointer_tsp_encoder.onnx  pointer_tsp_encoder.onnx.data  train_pointer_cvrptw.py  train_pointer_tsp.py  train_refiner.py  train_refiner_real.py  train_refiner_rl.py  train_refiner_v2.py  train_refiner_v3.py  training_log.txt  training_log_cvrptw.txt  training_log_refiner.txt  training_log_refiner_real.txt  training_log_refiner_rl.txt  training_log_refiner_v2.txt  training_log_refiner_v3.txt
crates/brooom/src/: cache.rs  cluster_decompose.rs  constraint.rs  dimension.rs  embedding.rs  error.rs  eval.rs  genetic.rs  global_constraint.rs  gpu_polish.rs  gpu_population.rs  gpu_sweep.rs  granular.rs  hgs.rs  insertion.rs  io.rs  lib.rs  local_search.rs  main.rs  matrix.rs  matrix_google.rs  neural.rs  options.rs  pattern_db.rs  population.rs  posidx.rs  problem.rs  propagate.rs  regression.rs  route_exact.rs  serve.rs  slack.rs  solution.rs  solver.rs  warm_start.rs  warp.rs
crates/brooom/src/broker/: cell_db.rs  mod.rs
crates/brooom/src/pyspell/: error.rs  eval.rs  ir.rs  lower.rs  mod.rs  py_frontend.rs  rust_frontend.rs
crates/brooom/tests/: broker_cost_quality.rs  constraint_parity.rs  constraints.rs  custom_constraints.rs  dimensions.rs  genetic_split.rs  global_constraints.rs  incremental_ls.rs  integration.rs  lahc.rs  lexicographic.rs  ls_heuristic_switches.rs  multi_trip.rs  multiobj.rs  options_surface.rs  over_consolidation.rs  posidx_equiv.rs  propagation.rs  pyspell_constraints.rs  pyspell_global_constraints.rs  slack_equiv.rs  soft_penalty.rs  warp_equiv.rs
crates/dijeng/: Cargo.toml  README.md  integration.txt
crates/dijeng/examples/: stream_compress.rs
crates/dijeng/src/: addresses.rs  auto.rs  bidir.rs  binary_table.rs  budget.rs  buffer.rs  build.rs  cache_ch.rs  cache_pp.rs  ch.rs  delta_step.rs  dijeng.rs  duan.rs  elevation.rs  farthest_first.rs  geo_index.rs  graph.rs  isochrone.rs  knn.rs  lib.rs  main.rs  matching.rs  names.rs  osm.rs  osm_profile.rs  polyline.rs  routing.rs  trip.rs
crates/matcodec/: Cargo.toml
crates/matcodec/examples/: cell_bench.rs  structure_lab.rs
crates/matcodec/src/: lib.rs  main.rs
crates/mpe-cli/: Cargo.toml
crates/mpe-cli/src/: main.rs
crates/mpe-serve/: Cargo.toml  README.md
crates/mpe-serve/src/: main.rs
crates/mpe-serve/static/: index.html
crates/mpee-cli/: Cargo.toml
crates/mpee-cli/src/: main.rs
crates/mpee-py/: Cargo.toml  README.md  pyproject.toml
crates/mpee-py/examples/: custom_constraints_smoke.py  flask_app.py  index.html
crates/mpee-py/python/: app.py
crates/mpee-py/python/mpee/: __init__.py  cli.py  server.py
crates/mpee-py/src/: lib.rs
crates/mpee-serve/: Cargo.toml  README.md
crates/mpee-serve/src/: main.rs
crates/mpee-wasm/: Cargo.toml
crates/mpee-wasm/src/: lib.rs
demo/: index.html
docs/: constraint-cookbook.md  future-vision.md  live-layer-design.md  matcodec-gateway-index.md
examples/: problem.json
python/: README.md  cache_server.py  run.sh  (+1 more)
(+71 files in other folders)
