[package]
name = "brooom"
version = "0.1.0"
edition = "2021"
description = "VRP solver in Rust — open alternative to Vroom"
license = "MIT"

[lib]
name = "brooom"
path = "src/lib.rs"

[[bin]]
name = "brooom"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
# GPU compute (cross-platform: Metal on M3, Vulkan on Linux, DX12 on Win).
# `pollster` blocks on the async device init since we don't bring tokio.
# `bytemuck` lets us cast `Vec<i32>` straight into a GPU buffer.
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
