[package]
name = "brooom"
version = "0.1.0"
edition = "2021"
description = "VRP solver in Rust — open alternative to Vroom"
license = "MIT"

[lib]
name = "brooom"
path = "src/lib.rs"

[[bin]]
name = "brooom"
path = "src/main.rs"
required-features = ["cli", "osrm", "google"]

# Feature flags
#
# `default = ["cli", "osrm"]` standalone build = binary + OSRM client. It does
#                         NOT pull `neural`, so a plain `cargo build` no longer
#                         downloads the ~200 MB ONNX runtime.
# `full`                  enables every optional capability (incl. neural).
# `cli`                   the standalone `brooom` binary (clap + main.rs).
# `osrm`                  HTTP-OSRM matrix source (ureq).
# `neural`                ONNX Pointer-Network warm-start (ort + ndarray +
#                         ~200 MB ONNX Runtime). Experimental and currently
#                         NOT called from anywhere in the solver — opt-in only.
# `mobile`                builds a slim library suitable for embedding
#                         in iOS / Android / WASM. Excludes neural +
#                         OSRM + the CLI binary. Keeps `wgpu` so the
#                         Metal-backed GPU local-search still works on
#                         Apple Silicon.
# `parallel` (rayon) and `gpu` (wgpu) are on by default for native; the wasm
# build omits both (serial CPU solver, no wgpu) via --no-default-features.
[features]
default  = ["cli", "osrm", "google", "parallel", "gpu"]
full     = ["cli", "osrm", "google", "neural", "parallel", "gpu"]
cli      = ["clap", "tracing-subscriber/env-filter", "gpu", "pyspell"]
osrm     = ["ureq"]
# Google Distance Matrix provider for the cost-aware broker (per-element pricing).
google   = ["ureq"]
neural   = ["ort", "ndarray"]
parallel = ["dep:rayon"]
gpu      = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
mobile   = []
# Constraint DSL: write constraints as code and run them native in the solver.
# `pyspell`        Rust-expression front-end via `syn` (already in the tree as a
#              build-dep; adds no new crates, just rebuilds syn with `full`).
# `pyspell-python` adds a Python-expression front-end via rustpython-parser (the
#              only genuinely new dependency tree — opt-in).
pyspell        = ["dep:syn"]
pyspell-python = ["pyspell", "dep:rustpython-parser"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matcodec = { path = "../matcodec" }
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1"
rayon = { version = "1.10", optional = true }
rand = "0.8"
rand_chacha = "0.3"
# `Instant` that works in the browser (performance.now()); on native this is a
# zero-cost re-export of std::time. Lets the solver's deadlines run on wasm.
web-time = "1"
ureq = { version = "2", features = ["json"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = { version = "0.17", optional = true }
# GPU compute (cross-platform: Metal on M3, Vulkan on Linux, DX12 on Win).
# `pollster` blocks on the async device init since we don't bring tokio.
# `bytemuck` lets us cast `Vec<i32>` straight into a GPU buffer.
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
# Constraint-DSL front-ends (optional; see the `pyspell` / `pyspell-python` features).
syn = { version = "2", features = ["full", "parsing"], optional = true }
rustpython-parser = { version = "0.4", optional = true }

# On wasm, rand's getrandom backend needs the browser crypto ("js") source.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
