[package]
name = "mpe-serve"
version = "0.1.0"
edition = "2021"
description = "Live HTTP server for mpe-engine — solves a VRP in-process (sharing memory with the solver) and serves the result as JSON + an embedded mobile-friendly Leaflet UI."
license = "MIT"

[[bin]]
name = "mpe-serve"
path = "src/main.rs"

[dependencies]
# Same shared-memory hand-off as mpe-cli: the solver result (Problem,
# Solution, Matrix) lives in this process's RAM and is read by the HTTP
# handlers without any copy or disk round-trip.
brooom     = { path = "../brooom" }
sssp_bench = { path = "../dijkstra" }

# Pure-Rust blocking HTTP server. Lightweight and dependency-free; we
# don't need async because we serve a tiny precomputed JSON bundle and
# a single embedded HTML page.
tiny_http = "0.12"

clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
