[package]
name = "mpee-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI driver for mpee — wires the dijeng (CH routing) and brooom (VRP solver) crates into one in-process pipeline with zero-copy shared memory."
license = "MIT"

[[bin]]
name = "mpee-cli"
path = "src/main.rs"

[dependencies]
# Path deps on both engines — the whole point is that the CLI loads a CH
# cache via dijeng, builds a routing matrix, and hands a `&Matrix` to
# brooom. No IPC, no disk on the hot path. The two Vec<i32> buffers that
# brooom consumes are owned by this process, in the same address space.
brooom     = { path = "../brooom", default-features = false, features = ["parallel", "gpu"] }  # no ONNX/OSRM/clap — but keep rayon (parallel) + wgpu (GPU)
dijeng = { path = "../dijeng" }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
