[package]
name = "mpee-py"
version = "0.3.0"
edition = "2021"
description = "PyO3 bindings that expose the mpee in-process VRP solver to Python. Build with `maturin develop --release`."
license = "MIT"

[lib]
# Compiled module is `mpee._mpee`; the pure-Python `mpee` package
# (python/mpee/) wraps it and provides the CLI.
name = "_mpee"
# `cdylib` is the format Python loads as an extension module.
crate-type = ["cdylib"]

[dependencies]
# Same path-deps as the Rust binaries — the bindings sit on top of the
# exact same brooom + sssp_bench code path. The Python caller and the
# solver share one address space; the JSON bytes returned by
# get_dataset_json() come straight out of the same Arc<String> that the
# solver thread populated.
brooom     = { path = "../brooom" }
sssp_bench = { path = "../dijeng" }

pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"
