[package]
name = "mpee-serve"
version = "0.1.0"
edition = "2021"
description = "Live HTTP server for mpee — solves a VRP in-process (sharing memory with the solver) and serves the result as JSON + an embedded mobile-friendly Leaflet UI."
license = "MIT"

[[bin]]
name = "mpee-serve"
path = "src/main.rs"

[dependencies]
# Same shared-memory hand-off as mpee-cli: the solver result (Problem,
# Solution, Matrix) lives in this process's RAM and is read by the HTTP
# handlers without any copy or disk round-trip.
brooom     = { path = "../brooom", default-features = false }  # no ONNX/OSRM/clap — the VRP solve path needs none of them
sssp_bench = { path = "../dijeng" }

# Pure-Rust blocking HTTP server. Lightweight and dependency-free; we
# don't need async because we serve a tiny precomputed JSON bundle and
# a single embedded HTML page.
tiny_http = "0.12"

clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
